--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,7 @@
   padding: 0;
   font-family: "Inter", sans-serif;
 }
+
+.box-shadow-xs {
+  box-shadow: 0px 1px 2px 0px rgba(20, 21, 26, 0.05);
+}
