--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,8 @@
 .box-shadow-xs {
   box-shadow: 0px 1px 2px 0px rgba(20, 21, 26, 0.05);
 }
+
+.video-box-shadow {
+  box-shadow: 0px 7.867px 12.587px -2.36px rgba(20, 21, 26, 0.08),
+    0px 2.36px 4.72px -1.573px rgba(20, 21, 26, 0.05);
+}
