--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,15 +26,10 @@
 .video-box-shadow {
   box-shadow: 0px 7.867px 12.587px -2.36px rgba(20, 21, 26, 0.08),
     0px 2.36px 4.72px -1.573px rgba(20, 21, 26, 0.05);
+  border: 0.787px solid rgba(10, 15, 41, 0.08);
+  border-radius: 0.5895rem;
 }
 
 .border-vid {
-  border-radius: 0.29475rem;
   border: 0.787px solid rgba(10, 15, 41, 0.08);
-}
-
-@media (min-width: 800px) and (max-width: 900px) {
-  .image-width {
-    width: 50%;
-  }
 }
